--- a/projects/web/app/views/guest/SpaceFileController/list.html
+++ b/projects/web/app/views/guest/SpaceFileController/list.html
@@ -15,7 +15,7 @@
 
 <br>
 
-#{crud.table fields: ['name', 'space.name', 'url']}
+#{crud.table fields: ['name', 'space.name', 'virtualName', 'publicUrl']}
     #{crud.custom 'space.name'}
         ${object.space.name}
     #{/crud.custom}
